Fixed Java 8 support